remove mentions of knockout

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -4,7 +4,18 @@
     <meta charset="UTF-8" />
     <link rel="icon" href="/logo.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>DesignForWear</title>
+    <title>AI Valentine's Day Shirt Designer - Create Custom Valentine's Apparel</title>
+    <meta name="description" content="Create custom Valentine's Day shirts and apparel with AI-powered design tools. Design unique Valentine's merchandise for your loved ones." />
+    
+    <!-- Open Graph / Facebook -->
+    <meta property="og:type" content="website" />
+    <meta property="og:title" content="AI Valentine's Day Shirt Designer - Create Custom Valentine's Apparel" />
+    <meta property="og:description" content="Create custom Valentine's Day shirts and apparel with AI-powered design tools. Design unique Valentine's merchandise for your loved ones." />
+    
+    <!-- Twitter -->
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:title" content="AI Valentine's Day Shirt Designer - Create Custom Valentine's Apparel" />
+    <meta name="twitter:description" content="Create custom Valentine's Day shirts and apparel with AI-powered design tools. Design unique Valentine's merchandise for your loved ones." />
   </head>
   <body>
     <div id="root"></div>
