--- a/frontend/index.html
+++ b/frontend/index.html
@@ -30,13 +30,15 @@
       fbq('init', '1965744607702753');
       fbq('track', 'PageView');
     </script>
+    <!-- End Meta Pixel Code -->
+  </head>
+  <body>
+    <!-- Meta Pixel Noscript -->
     <noscript>
       <img height="1" width="1" style="display:none"
       src="https://www.facebook.com/tr?id=1965744607702753&ev=PageView&noscript=1"/>
     </noscript>
-    <!-- End Meta Pixel Code -->
-  </head>
-  <body>
+    <!-- End Meta Pixel Noscript -->
     <div id="root"></div>
     <script type="module" src="/main.jsx"></script>
   </body>
